Renamed 'www' to 'dncompositemasts.com_new' to make it easier to push new content.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 index.html_ori
-www/About.html
-www/Contact.html
-www/ForSale.html
-www/Photos.html
-www/Products.html
-www/index.html
-www/Videos.html
+dncompositemasts.com_new/About.html
+dncompositemasts.com_new/Contact.html
+dncompositemasts.com_new/ForSale.html
+dncompositemasts.com_new/Photos.html
+dncompositemasts.com_new/Products.html
+dncompositemasts.com_new/index.html
+dncompositemasts.com_new/Videos.html
 old pages
