Added Jori's photo on the left of the main page.

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ dncompositemasts.com_new/Photos.html
 dncompositemasts.com_new/Products.html
 dncompositemasts.com_new/index.html
 dncompositemasts.com_new/Videos.html
+dncompositemasts.com_new/blueprint-placeholders-full/*
 old pages
