--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ dncompositemasts.com_new/index.html
 dncompositemasts.com_new/Videos.html
 dncompositemasts.com_new/blueprint-placeholders-full/*
 old pages
+Thumbs.db
