Finished image page creation for the first two images.

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ dncompositemasts.com_new/Products.html
 dncompositemasts.com_new/index.html
 dncompositemasts.com_new/Videos.html
 dncompositemasts.com_new/blueprint-placeholders-full/*
+dncompositemasts.com_new/images/DSC_5487a_900x600.html
+dncompositemasts.com_new/images/20120107DN19323-X3_650x650.html
 old pages
 Thumbs.db
