Added pyc files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ dncompositemasts.com_new/images/20120107DN19323-X3_650x650.html
 dncompositemasts.com_new/images/NA2012_900x506.html
 old pages
 Thumbs.db
+*.pyc
